--- a/changelog.mdx
+++ b/changelog.mdx
@@ -49,7 +49,7 @@ def get_search_results_documents(
 
 We have Added a new "All Charts" tab under the "Metric Charts" section of your Settings that displays all charts available in Chalk.
 The new tab shows:
-- A complete list of all charts in your environment
+- A complete list of all the charts in your environment
 - Chart types and categories
 - What entities or features each chart is attached to e.g. a link to view the chart
 - Any associated alerts
