--- a/changelog.mdx
+++ b/changelog.mdx
@@ -51,7 +51,7 @@ We have Added a new "All Charts" tab under the "Metric Charts" section of your S
 The new tab shows:
 - A complete list of all the charts in your environment
 - Chart types and categories
-- What entities or features each chart is attached to e.g. a link to view the chart
+- The entities or features that each chart is attached to (for example, a link to view the chart)
 - Any associated alerts
 
 ![All charts page](/img/changelog-2025_06_06-all_charts.png)
