--- a/changelog.mdx
+++ b/changelog.mdx
@@ -11,7 +11,7 @@ published: true
 ### New documentation on optimizing and verifying static Python resolvers
 
 We've added a new page to our docs that serves as a primer on how Chalk optimizes static Python resolvers.
-You can verify if your resolvers are optimized by checking query execution logs or the query plan page—optimized resolvers are highlighted in yellow and marked as "accelerated".
+You can verify if your resolvers are being accelerated by checking the query plan page—optimized resolvers are highlighted in yellow and marked as "accelerated".
 Python resolvers that cannot be optimized will show an error explaining why.
 We've extended support for accelerating Python expressions that
 * cast from strings to integers
