--- a/changelog.mdx
+++ b/changelog.mdx
@@ -47,7 +47,7 @@ def get_search_results_documents(
 
 ### Easily view all of your charts from the Settings page of Chalk Dashboard
 
-We have Added a new "All Charts" tab under the "Metric Charts" section of your Settings that displays all charts available in Chalk.
+We have added a new "All Charts" tab under the "Metric Charts" section of your Settings that displays all charts available in Chalk.
 The new tab shows:
 - A complete list of all the charts in your environment
 - Chart types and categories
