docs: updating resources page with autoscaling info

--- a/choosing-online-offline-stores.mdx
+++ b/choosing-online-offline-stores.mdx
@@ -1,6 +1,7 @@
 ---
 title: Online and Offline Stores
 description: Selecting an online and offline store for your environment
+published: true
 ---
 
 When setting up a new environment, Chalk provides several options for choosing a storage provider
